--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -111,7 +111,7 @@
                     <i class='bx bx-chevron-left'></i>
                 </a>
                 <div class="text">
-                    <a href="/settings" style="color: #695cfe; text-decoration: none;">Configuracion</a> > Gestion de Clientes
+                    <a href="/settings" style="color: #695cfe; text-decoration: none;">Ajustes</a> > Gestion de Clientes
                 </div>
             </div>
         </div>
