--- a/templates/design.html
+++ b/templates/design.html
@@ -120,7 +120,7 @@
 
         <div class="card-list" id="cardList">
             {% for item, item2 in filas %}
-            <div class="card-item" data-job-type="designer" style="cursor: pointer;">
+            <div class="card-item" data-job-type="designer" style="cursor: pointer;" data-image="{{ loop.index }}">
                 <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
                     <img src="../static/img/Editor.png" alt="Card Image" class="card-image">
                     <p class="card-title">{{ item[0] }}</p>
@@ -128,8 +128,29 @@
                         <span class="card-name">{{ item[3] }}</span>
                     </p>
                     <p class="card-info">
-                        <span class="job-title">Designer</span>
-                        <span class="date">{{ item[1] }}</span>
+                        {% if item[7] == 1 %}
+                        <span class="fase diseno">
+                            <i class="fa-solid fa-sliders"></i> Diseño
+                        </span>
+                    {% elif item[7] == 2 %}
+                        <span class="fase aprobacion">
+                            <i class="fa-regular fa-circle-check"></i> Aprobación
+                        </span>
+                    {% elif item[7] == 3 %}
+                        <span class="fase elaboracion">
+                            <i class="fa-solid fa-crop-simple"></i> Elaboración
+                        </span>
+                    {% elif item[7] == 4 %}
+                        <span class="fase entrega">
+                            <i class="fa-regular fa-paper-plane"></i> Entrega
+                        </span>
+                    {% else %}
+                        Valor no reconocido
+                    {% endif %}
+                    
+                    
+                        {% set date = item[1].split('-') %}
+                        <span class="date">{{date[2]}}/{{date[1]}}/{{date[0]}}</span>
                         <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
                     </p>
                     <div class="job-types-wrapper">
@@ -139,11 +160,13 @@
                             {% endfor %}
                         </div>
                     </div>
+                    </p>
                     <div class="actions">
                         <div class="arrow">
                             <i class="fas fa-arrow-right card-icon" title="Abrir"></i>
                         </div>
-                        <div class="delete" style="cursor: pointer;" onclick="handleDelete(event)">
+                        <div class="delete" style="cursor: pointer;" onclick="handleDelete(event,'{{item[6]}}')">
+                            <div id="nfo" value="{{item[6]}}"></div>
                             <i class="fas fa-trash-alt" title="Borrar"></i>
                         </div>
                     </div>
