--- a/templates/home.html
+++ b/templates/home.html
@@ -104,7 +104,20 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Inicio</div>
+            
+            <div class="text">Inicio 
+                
+                <div class="notification-container">
+                    <div class="notification-indicator" id="notificationIndicator"></div> <!-- Indicador de notificación -->
+                    <button class="notification-button" id="notificationButton">
+                        <i class="bx bxs-bell"></i> <!-- Icono de notificaciones -->
+                    </button>
+                    <div class="notification-dropdown" id="notificationDropdown"></div>
+                </div>
+                
+            
+            </div>
+            
             <div class="sort-dropdown">
                 <button class="sort-btn" type="button" onclick="toggleDropdown()">
                     <i class="fa-solid fa-list"></i>
@@ -403,6 +416,7 @@
         </div>
         {% endif %}
         {% endwith %}
+        
         <div class="modal-backdrop hidden"></div>
         <div class="card-list" id="cardList">
             {% for item, item2 in filas %}
@@ -477,6 +491,8 @@
     <script src="../static/js/sidebar.js"></script>
     <script src="../static/js/card-color.js"></script>
     <script src="../static/js/btn-floating.js"></script>
+    <script src="../static/js/send-notifications.js"></script>
+    <script src="../static/js/socket.io.js"></script>
     <script>
         function mostrarModal() {
             var modal = document.getElementById('add-modal-content');
@@ -484,5 +500,4 @@
         }
     </script>
 </body>
-
 </html>
