--- a/templates/work.html
+++ b/templates/work.html
@@ -201,10 +201,10 @@
 
                 <div class="confirmation-modal hidden" id="abonadoEditModal">
                     <div class="modal-content">
-                        <h3>Añadir Abono</h3>
+                        <h3>Añadir abono</h3>
                         <br>
                         <div class="modal-input-container">
-                            <input type="number" id="newAbonadoInput" placeholder="ingrese solo el monto abonado" step="0.01" required />
+                            <input type="number" id="newAbonadoInput" placeholder="Ingrese el nuevo monto abonado" step="0.01" required />
 
                         </div>
                         <div class="modal-actions">
