--- a/static/css/main.css
+++ b/static/css/main.css
@@ -830,7 +830,6 @@ body.dark .home-header .add-btn .button__text {
     z-index: 999;
     opacity: 0;
     visibility: hidden;
-    transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
 }
 
 .add-modal.visible {
@@ -840,7 +839,6 @@ body.dark .home-header .add-btn .button__text {
 }
 
 .add-modal.hidden {
-    transform: translate(-50%, -50%) scale(0.8);
     opacity: 0;
     visibility: hidden;
 }
@@ -1087,32 +1085,32 @@ body.dark .custom-checkbox {
 
 
 .submit-btn {
-    padding: 0.5rem 1rem;
-    background-color: #7E73F5;
+    background-color: #695cfe; /* Color al pasar el mouse */
     color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
+    border-radius: 8px; /* Esquinas redondeadas */
+    padding: 10px 20px;
     cursor: pointer;
+    border: none;
+    transition: background 0.3s;
 }
 
 .submit-btn:hover {
-    background-color: #5c4ef8;
+    background-color: #5b51c0; /* Color de fondo azul */; /* Color verde para el botón confirmar */
     /* Color más oscuro al pasar el ratón */
 }
 
 .reset-btn {
-    padding: 0.5rem 1rem;
-    background-color: #f86363;
+    background-color: #dc3545; /* Color rojo para el botón cancelar */
     color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
+    border-radius: 8px; /* Esquinas redondeadas */
+    padding: 10px 20px;
     cursor: pointer;
+    border: none;
+    transition: background 0.3s;
 }
 
 .reset-btn:hover {
-    background-color: #bb3835;
+    background-color: #c82333; /* Color más oscuro al pasar el mouse */
     /* Color más oscuro al pasar el ratón */
 }
 
@@ -1294,46 +1292,60 @@ body.dark .form-group textarea:focus {
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    z-index: 1000; /* Asegúrate de que el modal esté por encima del contenido */
+    display: flex; 
+    align-items: center; 
     justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
 }
 
 .confirmation-modal .modal-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
     text-align: center;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 12px; /* Esquinas más redondeadas para un diseño más suave */
+    max-width: 500px; /* Ampliar el ancho máximo para mayor comodidad */
+    width: 90%; /* Para que sea responsive */
+    box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.158); /* Agregar sombra para profundidad */
+}
+
+body.dark .modal-content {
+    background-color: #232425; /* Fondo oscuro para el modal */
+    color: #e0e0e0; /* Color del texto claro para el modal */
 }
 
 .modal-actions {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
-.confirm-btn,
-.cancel-btn {
+.confirm-btn{
+    background-color: #dc3545; /* Color rojo para el botón cancelar */
+    color: white;
+    border-radius: 8px; /* Esquinas redondeadas */
     padding: 10px 20px;
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
     cursor: pointer;
+    border: none;
+    transition: background 0.3s;
 }
 
-.confirm-btn {
-    background-color: #60b36e;
-    color: #fff;
+.confirm-btn:hover {
+    background-color: #c82333; /* Color más oscuro al pasar el mouse */
 }
 
-.cancel-btn {
-    background-color: #ff5b5b;
-    color: #fff;
+.cancel-btn{
+    background-color: #8a8a8a; /* Color al pasar el mouse */
+    color: white;
+    border-radius: 8px; /* Esquinas redondeadas */
+    padding: 10px 20px;
+    cursor: pointer;
+    border: none;
+    transition: background 0.3s;
+}
+
+.cancel-btn:hover {
+    background-color: #757575; /* Color de fondo azul */; /* Color verde para el botón confirmar */
 }
 
 .confirmation-modal.hidden {
-    transform: scale(1.2);
     opacity: 0;
     visibility: hidden;
 }
