--- a/templates/home.html
+++ b/templates/home.html
@@ -494,7 +494,7 @@
     <script src="../static/js/card-color.js"></script>
     <script src="../static/js/btn-floating.js"></script>
     <script src="../static/js/send-notifications.js"></script>
-    <script src="../static/js/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script>
         function mostrarModal() {
             var modal = document.getElementById('add-modal-content');
