--- a/templates/clients.html
+++ b/templates/clients.html
@@ -144,7 +144,7 @@
 
 
     <script src="../static/js/sidebar.js"></script>
-    <script src="../static/js/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script src="../static/js/send-notifications.js"></script>
    
     <script>
