--- a/templates/work.html
+++ b/templates/work.html
@@ -283,7 +283,7 @@
             <script src="../static/js/home.js"></script>
             <script src="../static/js/sidebar.js"></script>
             <script src="../static/js/work.js"></script>
-            <script src="../static/js/socket.io.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
             <script src="../static/js/send-notifications.js"></script>
         </div>
         <input type="hidden" id="id" value="{{nor}}">
