--- a/templates/home.html
+++ b/templates/home.html
@@ -188,11 +188,11 @@
                         <div class="form-row" id="userFields">
                             <div class="form-group">
                                 <label for="name">Nombre:</label>
-                                <input type="text" id="name" name="names" required disabled>
+                                <input type="text" id="name" name="names" class="no-space" required>
                             </div>
                             <div class="form-group">
                                 <label for="surname">Apellido:</label>
-                                <input type="text" id="surname" name="surname" required disabled>
+                                <input type="text" id="surname" name="surname" class="no-space" required>
                             </div>
                         </div>
                         <div class="form-row" id="telField">
