--- a/templates/settings-user.html
+++ b/templates/settings-user.html
@@ -124,11 +124,11 @@
                 <form method="POST" action="{{ url_for('settings_user') }}">
                     <div class="form-group">
                         <label for="username">Usuario:</label>
-                        <input type="text" id="username" name="username" required placeholder="Ingrese el nombre de usuario">
+                        <input type="text" id="username" name="username" required placeholder="Ingrese el nombre de usuario" class="no-space">
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña:</label>
-                        <input type="password" id="password" name="password" required placeholder="Ingrese la contraseña">
+                        <input type="password" id="password" name="password" required placeholder="Ingrese la contraseña" class="no-space">
                     </div>
                     <div class="form-group">
                         <label for="role">Cargo:</label>
